fix bottom spacing to footer

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,6 +14,7 @@
 .wrapper {
     margin: 30px auto;
     width: 80%;
+    padding-bottom: 80px;
 }
 
 .zoom-background-hover {
